# Meeting-intelligance-Systems

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ui  QUICKSTART.md  README.md  docker-compose.override.yml  docker-compose.yaml  last_meeting_id.txt  main.py  pyproject.toml  report.html
.streamlit/: config.toml
app/: main.py
app/core/: config.py  openai_client.py
app/extract/: prompts.py  summarizer.py
app/guardrails/: citations.py  errors.py  prompt_injection.py  rate_limit.py
app/ingest/: chunker.py  duplicate_check.py  indexer.py  jobs.py  meeting_stats.py  parser.py  worker.py
app/models/: schemas.py
app/observability/: middleware.py
app/prompts/: README.md  __init__.py  loader.py
app/rag/: answerer.py  context.py  prompts.py  query_rewriter.py  retriever.py  streamer.py
app/utils/: retry.py  sparse_encoding.py
data/: ingested_content_hashes.json  last_meeting_id.txt
data/meeting_metadata/: 075611c2-2c7f-4d37-992d-5507fe37335e.json  10fe0942-2d75-4907-8fb0-01e8d7b624da.json  13ea47eb-3cf0-474a-8c47-87e013ddcd06.json  1978801e-e31e-4150-8b75-652ff06d4d90.json  1a43cdd7-501a-4b25-8567-66fc4b3bd481.json  1ad98d06-3e7b-4bd2-ab6d-74d519af2de9.json  2ab96983-066a-477b-b47f-7f7891372ba3.json  2c6ed5cd-3e11-4b9e-a541-4ba6962d3294.json  2d501940-8ab9-49b7-bf4d-c01749a46820.json  (+33 more)
docs/: AUDIT_REPORT.md
sample_data/: transcript1.txt
scripts/: fresh_reset.sh  print_limits.py
tests/: conftest.py  test_citations.py  test_e2e_api.py  test_parser.py  test_timestamps.py
ui/: main_content.py  sample_transcript.txt  streamlit_app.py
(+8 files in other folders)
